Additional ZGC analysis.