@@ -2830,4 +2830,14 @@ public class TestAnalysis {
                 Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED + " analysis not identified.");
     }
 
+    @Test
+    void testZUncommit() {
+        String opts = "-Xss1g -XX:+UseZGC -XX:-ZUncommit -Xmx10g";
+        JvmContext context = new JvmContext(opts);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_Z_UNCOMMIT_DISABLED.getKey()),
+                Analysis.INFO_Z_UNCOMMIT_DISABLED + " analysis not identified.");
+    }
+
 }
